--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "twozero48"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Devdutt Shenoi <devdutt@outlook.in>"]
 edition = "2018"
 license = "MIT"
@@ -10,6 +10,7 @@ description = "A CLI implementation of 2048, in rust"
 [dependencies]
 termion = "1"
 rand = "0.7"
+clap = "3.0.0-beta.2"
 
 [[bin]]
 name = "twozero48"
